//
// Chapter 07
//    Error Handling

//
// 프로토3 문법을 사용한다고 지정한다.
// 이것을 생략할 경우 프로토2 문법으로 해석한다.
syntax = "proto3";

//
// 패키지 이름 (= 네임스페이스)
// 다른 프로토 파일과 구분되도록 할 것.
package chapter07;

//
// 요청 메세지
message EchoObject {
    string Message = 1 ;
}

//
// 서비스 명세
service Echo {
    //
    // 콜백을 호출하지 않는다.
    rpc echo_nocallback (EchoObject) returns (EchoObject);

    //
    // 콜백 전에 처리되지 않은 예외를 발생시킴.
    rpc echo_exception (EchoObject) returns (EchoObject);

    //
    // 콜백으로 에러를 넘김.
    rpc echo_callback_with_error (EchoObject) returns (EchoObject);
}